Ficha del jugador completa
Además he cambiado un poco la estética de esta poniendo sus datos a la derecha (cuando la pantalla lo permite)

--- a/ficha.html
+++ b/ficha.html
@@ -24,11 +24,23 @@
             <div class="title">
                 <h2>Cristiano Ronaldo dos Santos Aveiro</h2>
             </div>
-            <img id="player-photo" src="imagenes/players/CristianoRonaldo.png" alt="Cristiano Ronaldo">
-            <p><strong>Posición:</strong> Delantero</p>
-            <p><strong>Fecha de Nacimiento:</strong> 5 de febrero de 1985</p>
-            <p><strong>Nacionalidad:</strong> Portugués</p>
-            <p><strong>Número de Camiseta:</strong> 7</p>
+            <div class="row">
+                <div class="col-md-4">
+                    <img id="player-photo" src="imagenes/players/CristianoRonaldo.png" alt="Cristiano Ronaldo">
+                </div>
+                <div class="col-md-8">
+                    <p><strong>Posición:</strong> Delantero</p>
+                    <p><strong>Fecha de Nacimiento:</strong> 5 de febrero de 1985</p>
+                    <p><strong>Nacionalidad:</strong> Portugués</p>
+                    <p><strong>Precio:</strong> 100.000.000 €</p>
+                    <p><strong>Descripción:</strong> Cristiano Ronaldo, nacido el 5 de febrero de 1985 en Portugal, es
+                        uno de los mejores futbolistas de la historia. Destacado por su habilidad técnica, velocidad y
+                        capacidad goleadora, ha tenido exitosas etapas en clubes como el Manchester United y el Real
+                        Madrid, ganando múltiples títulos, incluidas varias Ligas de Campeones. Su carrera internacional
+                        con Portugal también ha sido destacada, culminando en la victoria en la Eurocopa 2016. Más allá
+                        del fútbol, Ronaldo es una figura globalmente reconocida y admirada.</p>
+                </div>
+            </div>
 
             <button type="button" class="btn">Editar</button>
             <button type="button" class="btn">Eliminar</button>
