--- a/formulario.html
+++ b/formulario.html
@@ -37,7 +37,7 @@
             </div>
             <div class="form-group">
                 <label for="descripcion">Descripción </label>
-                <textarea type="descripcion" class="custom-input form-contro " id="descripcion" placeholder=""></textarea> <!-- se pone textarea en vez de input para permitir la entrada de texto(escribir) en varías líneas-->
+                <textarea type="descripcion" class="form-control " id="descripcion" placeholder=""></textarea> <!-- se pone textarea en vez de input para permitir la entrada de texto(escribir) en varías líneas-->
             </div>
             <div class="form-group">
                 <label for="posicion">Posición </label>
