Añadido al form de ficha los id

--- a/ficha.html
+++ b/ficha.html
@@ -106,15 +106,15 @@
             <form role="form">
                 <div class="form-group">
                     <label for="emblem">Escudo</label>
-                    <input type="file" class="form-control">
+                    <input type="file" class="form-control" id="emblem">
                 </div>
                 <div class="form-group">
                     <label for="team">Club</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" id="team">
                 </div>
                 <div class="form-group">
                     <label for="stage">Etapa</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" id="stage">
                 </div>
             </form>
 
