--- a/formulario.html
+++ b/formulario.html
@@ -23,55 +23,50 @@
 
         <form role="form">
             <div class="form-group">
-                <label for="nombre">Nombre </label>
-                <input type="nombre" class="form-control" id="nombre" placeholder="Escriba el nombre">
+                <label for="name">Nombre del jugador</label>
+                <input type="text" class="form-control" id="name" placeholder="Nombre y apellidos">
             </div>
 
             <div class="form-group">
-                <label for="apellidos">Apellidos </label>
-                <input type="apellidos" class="form-control" id="apellidos" placeholder="Escriba los apellidos">
+                <label for="description">Descripción</label>
+                <textarea type="text" class="form-control " id="description" placeholder="Detalles del jugador"></textarea>
             </div>
 
-            <div class="form-group">
-                <label for="descripcion">Descripción </label>
-                <textarea type="descripcion" class="form-control " id="descripcion" placeholder=""></textarea>
-            </div>
-
-            <div class="form-group">
-                <label for="posicion">Posición </label>
-                <select class="form-select" name="posicion">
-                    <option value="" disabled selected hidden>Elige una opción</option>
-                    <option value="1">Delantero</option>
-                    <option value="2">Medio</option>
-                    <option value="3">Defensa</option>
-                    <option value="3">Portero</option>
-                </select>
+            <div class="row">
+                <div class="form-group col-md-6 col-sm-12">
+                    <label for="position">Posición</label>
+                    <select class="form-select" name="position">
+                        <option value="" disabled selected hidden>Banquillo</option>
+                        <option value="1">Delantero</option>
+                        <option value="2">Medio</option>
+                        <option value="3">Defensa</option>
+                        <option value="3">Portero</option>
+                    </select>
+                </div>
+                <div class="form-group col-md-6 col-sm-12">
+                    <label for="jersey-number">Dorsal</label>
+                    <input type="number" class="form-control" id="jersey-number" placeholder="0">
+                </div>
             </div>
             
-            <div class="form-group">
-                <label for="nacimiento">Nacimiento </label>
-                <input type="nacimiento" class="form-control" id="nacimiento"
-                    placeholder="D&iacute;game la fecha de nacimiento">
+            <div class="form-group row">
+                <div class="col-md-6 col-sm-12">
+                    <label for="birthday">Fecha de nacimiento</label>
+                    <input type="date" class="form-control text-uppercase" id="birthday">
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <label for="nationality">Nacionalidad</label>
+                    <input type="text" class="form-control" id="nationality" placeholder="Ej.: Española">
+                </div>
             </div>
 
             <div class="form-group">
-                <label for="nacionalidad">Nacionalidad </label>
-                <input type="nacionalidad" class="form-control" id="nacionalidad"
-                    placeholder="D&iacute;game la nacionalidad">
+                <label for="player-photo">Foto de perfil</label>
+                <input type="file" class="form-control" id="player-photo">
             </div>
 
             <div class="form-group">
-                <label for="N&uacute;mero de camiseta">N&uacute;mero de camiseta </label>
-                <input type="number" class="form-control" id="numero" placeholder=" D&iacute;game el n&uacute;mero de camiseta">
-            </div>
-
-            <div class="form-group">
-                <label for="archivo"> Foto Ficha</label>
-                <input type="file" class="form-control" name="archivo" id="archivo">
-            </div>
-
-            <div class="form-group">
-                <label for="price">Precio</label>
+                <label for="price">Valor de mercado</label>
                 <input type="range" class="form-range" id="price" value="0" min="0" max="100000000" step="10000" oninput="this.nextElementSibling.value = this.value">
                 <output for="price" id="outrange">0</output>€
             </div>
