--- a/ficha.html
+++ b/ficha.html
@@ -29,9 +29,10 @@
                 </div>
                 <div class="col-md-8">
                     <p><strong>Posición:</strong> Delantero</p>
-                    <p><strong>Fecha de Nacimiento:</strong> 5 de febrero de 1985</p>
+                    <p><strong>Dorsal:</strong> 7</p>
+                    <p><strong>Fecha de nacimiento:</strong> 5 de febrero de 1985</p>
                     <p><strong>Nacionalidad:</strong> Portugués</p>
-                    <p><strong>Precio:</strong> 100.000.000 €</p>
+                    <p><strong>Valor de mercado:</strong> 100.000.000 €</p>
                     <p><strong>Descripción:</strong> Cristiano Ronaldo, nacido el 5 de febrero de 1985 en Portugal, es
                         uno de los mejores futbolistas de la historia. Destacado por su habilidad técnica, velocidad y
                         capacidad goleadora, ha tenido exitosas etapas en clubes como el Manchester United y el Real
