--- a/ficha.html
+++ b/ficha.html
@@ -5,6 +5,7 @@
     <title>Ficha de Cristiano Ronaldo</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link type="text/css" rel="stylesheet" href="base.css" />
     <link type="text/css" rel="stylesheet" href="ficha.css" />
 </head>
@@ -22,7 +23,7 @@
     <div class="data">
         <div class="container">
             <h2>Cristiano Ronaldo dos Santos Aveiro</h2>
-            
+
             <div class="row">
                 <div class="col-md-4">
                     <img id="player-photo" src="imagenes/players/CristianoRonaldo.png" alt="Cristiano Ronaldo">
@@ -42,9 +43,9 @@
                 </div>
             </div>
 
-            <button type="button" class="btn">Editar</button>
-            <button type="button" class="btn">Eliminar</button>
-            <a href="plantilla.html" class="btn" role="button">Volver</a>
+            <button type="button" class="btn"><i class="bi bi-pencil"></i> Editar</button>
+            <button type="button" class="btn"><i class="bi bi-trash"></i> Eliminar</button>
+            <a href="plantilla.html" class="btn" role="button"><i class="bi bi-box-arrow-left"></i> Volver</a>
         </div>
 
         <div class="container">
@@ -119,7 +120,7 @@
                 </div>
             </form>
 
-            <button type="button" class="btn">Añadir nuevo equipo</button>
+            <button type="button" class="btn"><i class="bi bi-plus-lg"></i> Añadir nuevo equipo</button>
         </div>
     </div>
 </body>
