--- a/formulario.html
+++ b/formulario.html
@@ -3,8 +3,9 @@
 
 <head>
     <title>Formulario Inscribir Jugadores</title>
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link type="text/css" rel="stylesheet" href="base.css" />
     <link type="text/css" rel="stylesheet" href="Formulario.css" />
 </head>
@@ -49,7 +50,7 @@
                     <input type="number" class="form-control" id="jersey-number" placeholder="0">
                 </div>
             </div>
-            
+
             <div class="form-group row">
                 <div class="col-md-6 col-sm-12">
                     <label for="birthday">Fecha de nacimiento</label>
@@ -73,8 +74,8 @@
             </div>
         </form>
 
-        <button type="Guardar" class="btn btn-guardar">Guardar</button>
-        <a href="plantilla.html" class="btn btn-cancelar" role="button">Cancelar</a>
+        <button type="Guardar" class="btn btn-guardar"><i class="bi bi-download"></i> Guardar</button>
+        <a href="plantilla.html" class="btn btn-cancelar" role="button"><i class="bi bi-x-lg"></i> Cancelar</a>
     </div>
 </body>
 
