--- a/plantilla.html
+++ b/plantilla.html
@@ -5,6 +5,7 @@
     <title>Practica 1</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link type="text/css" rel="stylesheet" href="base.css" />
     <link type="text/css" rel="stylesheet" href="plantilla.css" />
 </head>
@@ -65,7 +66,7 @@
             </a>
         </div>
 
-        <a href="formulario.html" class="btn" role="btn">Inscribir nuevo jugador</a>
+        <a href="formulario.html" class="btn" role="btn"><i class="bi bi-person-fill-add"></i> Inscribir nuevo jugador</a>
     </section>
 
 </body>
