El resurgir de form-btn
Estaba equivocado sacando los botones del form y eliminando el contenedor para botones.
La verdad es que, por semántica, los botones tienen que estar dentro del form (no sé porque no lo vi antes). El problema está en que al introducirlo, para poder centrarlo(s), necesariamente hay que hacer un contenedor. En otras palabras, Gonza lo tenía bien, pero también he de decir que el ni lo usaba para esto (por lo que complicado de verlo) y había un margin:33% que los colocaba mal (menos ayuda).
Sea como fuere, el apaño del margin-bottom no ha desaparecido y ha habido que hacerlo igual porque sino, en vez de haber 40px entre botón y formulario, habría 40px entre botón y fondo del contenedor.

--- a/ficha.html
+++ b/ficha.html
@@ -118,9 +118,10 @@
                     <label for="stage">Etapa</label>
                     <input type="text" class="form-control" id="stage">
                 </div>
+                <div class="form-btn">
+                    <button type="button" class="btn"><i class="bi bi-plus-lg"></i> Añadir nuevo equipo</button>
+                </div>
             </form>
-
-            <button type="button" class="btn"><i class="bi bi-plus-lg"></i> Añadir nuevo equipo</button>
         </div>
     </div>
 </body>
