--- a/formulario.html
+++ b/formulario.html
@@ -72,10 +72,11 @@
                 <input type="range" class="form-range" id="price" value="0" min="0" max="100000000" step="10000" oninput="this.nextElementSibling.value = this.value">
                 <output for="price" id="outrange">0</output>€
             </div>
+            <div class="form-btn">
+                <button type="Guardar" class="btn btn-guardar"><i class="bi bi-download"></i> Guardar</button>
+                <a href="plantilla.html" class="btn btn-cancelar" role="button"><i class="bi bi-x-lg"></i> Cancelar</a>
+            </div>
         </form>
-
-        <button type="Guardar" class="btn btn-guardar"><i class="bi bi-download"></i> Guardar</button>
-        <a href="plantilla.html" class="btn btn-cancelar" role="button"><i class="bi bi-x-lg"></i> Cancelar</a>
     </div>
 </body>
 
