--- a/ficha.html
+++ b/ficha.html
@@ -112,12 +112,18 @@
                 </div>
                 <div class="form-group">
                     <label for="team">Club</label>
-                    <input type="text" class="form-control" id="team">
+                    <input type="text" class="form-control" id="team" placeholder="Nombre del equipo">
                 </div>
-                <div class="form-group">
+                <div class="form-group row">
                     <label for="stage">Etapa</label>
-                    <input type="text" class="form-control" id="stage">
+                    <div class="col-sm-6 col-xs-12">
+                        <input type="number" class="form-control" id="start-stage" placeholder="Primer año">
+                    </div>
+                    <div class="col-sm-6 col-xs-12">
+                        <input type="number" class="form-control" id="end-stage" placeholder="Último año">
+                    </div>
                 </div>
+
                 <div class="form-btn">
                     <button type="button" class="btn"><i class="bi bi-plus-lg"></i> Añadir nuevo equipo</button>
                 </div>
