Los botones vuelven a funcionar bien
Por fin, ya están de vuelta.
El profe me ha comentado que, para que no se solapen los estilos del bootstrap, creara otra clase extra y editara esa en el css.
Con eso, y que ayer hice el form-btn, me ha venido la idea de encapsular los botones en un contedor y usarlo en los bloques btn del css para que así sean más especificos y, por tanto, predomine mi estilo.
Solamente era necesario en el active, pero por consistencia lo he aplicado en todo.

--- a/ficha.html
+++ b/ficha.html
@@ -45,9 +45,11 @@
                 </div>
             </div>
 
-            <button type="button" class="btn"><i class="bi bi-pencil"></i> Editar</button>
-            <button type="button" class="btn"><i class="bi bi-trash"></i> Eliminar</button>
-            <a href="plantilla.html" class="btn" role="button"><i class="bi bi-box-arrow-left"></i> Volver</a>
+            <div class="btn-cont">
+                <button type="button" class="btn"><i class="bi bi-pencil"></i> Editar</button>
+                <button type="button" class="btn"><i class="bi bi-trash"></i> Eliminar</button>
+                <a href="plantilla.html" class="btn" role="button"><i class="bi bi-box-arrow-left"></i> Volver</a>
+            </div>
         </div>
 
         <div class="container">
@@ -126,7 +128,7 @@
                     </div>
                 </div>
 
-                <div class="form-btn">
+                <div class="btn-cont">
                     <button type="button" class="btn"><i class="bi bi-plus-lg"></i> Añadir nuevo equipo</button>
                 </div>
             </form>
