--- a/plantilla.html
+++ b/plantilla.html
@@ -68,7 +68,9 @@
             </a>
         </div>
 
-        <a href="formulario.html" class="btn" role="btn"><i class="bi bi-person-fill-add"></i> Inscribir nuevo jugador</a>
+        <div class="btn-cont">
+            <a href="formulario.html" class="btn" role="btn"><i class="bi bi-person-fill-add"></i> Inscribir nuevo jugador</a>
+        </div>
     </section>
 
 </body>
