--- a/formulario.html
+++ b/formulario.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Formulario Inscribir Jugadores</title>
+    <title>Formulario nuevos jugadores</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
