--- a/ficha.html
+++ b/ficha.html
@@ -60,7 +60,7 @@
                     <tr>
                         <th>Escudo</th>
                         <th>Club</th>
-                        <th>Etapa</th>
+                        <th>Temporadas</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -69,42 +69,42 @@
                             <img src="imagenes/teams/Sporting_Lisboa.png" alt="Sporting Lisboa" class="tbl_img">
                         </td>
                         <td>Sporting de Lisboa</td>
-                        <td>2002-03</td>
+                        <td>1</td>
                     </tr>
                     <tr>
                         <td>
                             <img src="imagenes/teams/Manchester_United.png" alt="Manchester United" class="tbl_img">
                         </td>
                         <td>Manchester United</td>
-                        <td>2003-09</td>
+                        <td>6</td>
                     </tr>
                     <tr>
                         <td>
                             <img src="imagenes/teams/Real_Madrid.png" alt="Real Madrid" class="tbl_img">
                         </td>
                         <td>Real Madrid</td>
-                        <td>2009-18</td>
+                        <td>9</td>
                     </tr>
                     <tr>
                         <td>
                             <img src="imagenes/teams/Juventus.png" alt="Juventus" class="tbl_img">
                         </td>
                         <td>Juventus</td>
-                        <td>2018-22</td>
+                        <td>4</td>
                     </tr>
                     <tr>
                         <td>
                             <img src="imagenes/teams/Manchester_United.png" alt="Manchester United" class="tbl_img">
                         </td>
                         <td>Manchester United</td>
-                        <td>2021-22</td>
+                        <td>1</td>
                     </tr>
                     <tr>
                         <td>
                             <img src="imagenes/teams/Al-Nassr.png" alt="Al-Nassr" class="tbl_img">
                         </td>
                         <td>Al-Nassr</td>
-                        <td>2022-24</td>
+                        <td>2</td>
                     </tr>
                 </tbody>
             </table>
@@ -119,13 +119,13 @@
                     <input type="text" class="form-control" id="team" placeholder="Nombre del equipo">
                 </div>
                 <div class="form-group row">
-                    <label for="stage">Etapa</label>
+                    <label for="stage">Temporadas</label>
                     <div class="col-sm-6 col-xs-12">
-                        <input type="number" class="form-control" id="start-stage" placeholder="Primer año">
+                        <input type="number" class="form-control" id="start-stage" placeholder="Temporadas">
                     </div>
-                    <div class="col-sm-6 col-xs-12">
+                    <!--<div class="col-sm-6 col-xs-12">
                         <input type="number" class="form-control" id="end-stage" placeholder="Último año">
-                    </div>
+                    </div>-->
                 </div>
 
                 <div class="btn-cont">
