Cambio en las URLs
"/plantilla.html" no funcionaba ya que era "/" y tener en la URL ".html" no me gustaba.
De hecho me planteo meter el formulario en el router solamente para quitarle la extensión al URL

--- a/public/formulario.html
+++ b/public/formulario.html
@@ -77,7 +77,7 @@
 
             <div class="btn-cont">
                 <button type="Guardar" class="btn btn-guardar"><i class="bi bi-download"></i> Guardar</button>
-                <a href="plantilla.html" class="btn btn-cancelar" role="button"><i class="bi bi-x-lg"></i> Cancelar</a>
+                <a href="/" class="btn btn-cancelar" role="button"><i class="bi bi-x-lg"></i> Cancelar</a>
             </div>
         </form>
     </div>
