--- a/public/formulario.html
+++ b/public/formulario.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Vina+Sans|Kanit" rel="stylesheet" type="text/css">
 
     <link type="text/css" rel="stylesheet" href="base.css" />
-    <link type="text/css" rel="stylesheet" href="Formulario.css" />
+    <link type="text/css" rel="stylesheet" href="formulario.css" />
 </head>
 
 <body>
